more changes
refactor code. create constants. using map for content into EmailSender